2023-11-26  Karl Berry  <karl@tug.org>

	* tb137capsule.txt: 44:2 public.

2023-11-15  Karl Berry  <karl@freefriends.org>

	* capcrossref.pl (crossref_write_files): give original Last, First
	to ltx2crossrefxml if Last contains any a0 (or nbsp), to handle
	last names containing two words (Stary Novotny).

	* crossref/README-process.txt: tweak initial setup.
	* crossref/ltx2crossrefxml-tugboat.cfg (GuIT): handle,
	for tb138somma-orgmode.

2023-11-14  Karl Berry  <karl@tug.org>

	* capaccum-author.pl (print_all_by_author): more debugging lines,
	commented out. Last names containing spaces, like Stary Novotny,
	need \CONNECT.
	* tb138capsule.txt (starynovotny): need \CONNECT.
	(bien): forgot S.
	* lists-unificatoins.txt (V&#xed;t Star&#xfd;&#xa0;Novotn&#xfd;):
	new unification for Vit.

2023-11-14  Karl Berry  <karl@freefriends.org>

	* Makefile: start tb138 (44:3).
	* tb138capsule.txt: new file.

2023-11-01  Karl Berry  <karl@freefriends.org>

	* tb79capsule.txt (Piska): url in wrong slot.

2023-10-27  Karl Berry  <karl@freefriends.org>

	* lists-unifications.txt (Lamb): prefer John D.
	
	* ltx2crossrefxml-tugboat.cfg (\GUI): handle.

2023-09-20  Karl Berry  <karl@freefriends.org>

	* lists-authinfo.txt (Beebe): orcid.

2023-09-19  Karl Berry  <karl@tug.org>

	* capaccum-title.pl (output_title_list): mis-edited out a "TUGboat".

2023-09-18  Karl Berry  <karl@freefriends.org>

	* capaccum-author.pl (output_author_list),
	* capaccum-keyword.pl,
	* capaccum-title.pl: tweak title wording, /TUGboat link.
	* capaccum.pl (accumulation):
	* capout.pl (write_issue): call tub_common_header, wording.
	* caputil.pl (tub_common_header): new fn for header text
	common to the lists and individual issue contents, with
	links to / and /TUGboat.

	* Makefile (diff-land): update previous to 44-1 (must automate).
	* crossref/README-process.txt: final svn diff/revert.
	
	* tb22capsule.txt (RIDT): Imaging, not Imagining.

2023-09-14  Karl Berry  <karl@freefriends.org>
